comments ch 6 guidelines

--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -1,6 +1,6 @@
 # DISCUSSION AND RECOMMENDATIONS FOR FUTURE WORK {#recommendations}
 
-## KEY UNCERTAINTIES THAT AFFECT LRP ESTIMATES 
+## KEY UNCERTAINTIES THAT AFFECT LRP ESTIMATES
 <!--CH: this section is a TOR element-->
 
 ### CU assessments
@@ -17,12 +17,16 @@ Structural uncertainty in stock-recruitment models underlying benchmark estimati
 
 Uncertainties in percentile-based benchmarks can be calculated from bootstrapped confidence intervals of benchmarks accounting for autocorrelation in spawner abundances [@peacockEvaluatingConsequencesCommon2020; @holtEvaluatingBenchmarksBiological2018]. Uncertainties in their implementation can arise because of uncertainties in estimates of productivity and harvest rates that are used to categorize populations to identify appropriate percentiles to use (as described in  @holtEvaluatingBenchmarksBiological2018). 
 
-Uncertainties in benchmarks derived from the watershed-area model can be approximated using bootstrapped 95% confidence intervals [@parkenHabitatbasedMethodsEstimate2006]. Because the watershed-area model was parameterized based on a meta-analysis of spawner-recruit data sets that were outdated (ending in 2000) and likely more productive compared with for populations in our case study, we derived derived productivity estimates and uncertainties from a life-stage specific model for WCVI Chinook combined with expert opinion. 
-<!--CH comment to CW: Catarina, now that you've reminded me about the delta method, I'm not sure I estimated CIs correctly here. I used 95%CI of SREP (capacity) from TMB outputs, and then used a distribution of productivity from expert opinion (leaning on Wilf's life-stage model) and drew randomly from both to get a bootstrapped 95% CI of Sgen, where Sgen is F(Srep, prod). Is this okay mathematically?-->
+Uncertainties in benchmarks derived from the watershed-area model can be approximated using bootstrapped 95% confidence intervals [@parkenHabitatbasedMethodsEstimate2006]. Because the watershed-area model was parameterized based on a meta-analysis of spawner-recruit data sets that were outdated (ending in 2000) and likely more productive compared with for populations in our case study, we derived productivity estimates and uncertainties from a life-stage specific model for WCVI Chinook combined with expert opinion. 
+<!--CH comment to CW: Catarina, now that you've reminded me about the delta method, I'm not sure I estimated CIs correctly here. I used 95%CI of SREP (capacity) from TMB outputs, and then used a distribution of productivity from expert opinion (leaning on Wilf's life-stage model) and drew randomly from both to get a bootstrapped 95% CI of Sgen, where Sgen is F(Srep, prod). Is this okay mathematically?
+I Think that theoretically we should have used the posterior distribution of Srep instead, however, I doubt it will make a difference in the actual results. I think that the fact that we were forced to assume that productivity and Srep are independent (not correlated) is more influential (will overestimete the uncertainty). But we did not have another choice.  -->
 
 Uncertainties in peer-reviewed WSP assessments are captured qualitatively through narratives associated with each CU assessment (e.g., @dfoWildSalmonPolicy2015) derived from experts integrating uncertainties in data and estimation of benchmarks and reconciling conflicting metrics. This process requires careful consideration of expertise included to ensure that best available information is incorporated in assessments and associated description of uncertainties.  
 
-Although uncertainties in status derived from the Salmon Scanner are not currently provided, this functionality is being considered for future iterations of the tool. The Salmon Scanner is applied annually within an expert-driven process led by DFO's State of the Salmon Program, so underlying uncertainties are considered and outputs are ground-truthed by local experts. A full review of the the Salmon Scanner, including uncertainties is forthcoming (Pestal et al. in prep).<!--CH comment: There are many uncertainties associated with this tool, but I'm not sure that it's useful for us to include them here as it will invite discussion on topics that are outside scope. Example uncertainties are that the Tool does not include distributional metrics or productivity which may be important in formal WSP assessments, and the Tool was parameterized based on a set of southern stocks so does not necessarily represent the entire range.-->
+Although uncertainties in status derived from the Salmon Scanner are not currently provided, this functionality is being considered for future iterations of the tool. The Salmon Scanner is applied annually within an expert-driven process led by DFO's State of the Salmon Program, so underlying uncertainties are considered and outputs are ground-truthed by local experts. A full review of the the Salmon Scanner, including uncertainties is forthcoming (Pestal et al. in prep).<!--CH comment: There are many uncertainties associated with this tool, but I'm not sure that it's useful for us to include them here as it will invite discussion on topics that are outside scope. Example uncertainties are that the Tool does not include distributional metrics or productivity which may be important in formal WSP assessments, and the Tool was parameterized based on a set of southern stocks so does not necessarily represent the entire range.
+CW: the tool also does not account for status uncertainty, or provide status in a probabilistic way (i.e. X% chance that status is red)-- I am not sure that this is something we want to bring up, but it may be something that comes up in the CSAS meeting?
+
+ -->
 
 
 ### Proportion-based LRPs
@@ -32,8 +36,15 @@ Uncertainties in status derived from proportion-based LRPs can arise from the ex
 
 ### Logistic-regression based LRPs
 
-For logistic regression-based LRPs, we provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above LRP given uncertainties in the LRP. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs that accounts for both. 
+For logistic regression-based LRPs, we provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). When estimated in a Bayesian framework, the probability distribution of LRPs can be generated to provide the probability that the current status is above LRP given uncertainties in the LRP<!-- CW: remove:given uncertainties in the LRP-->. In future analyses, uncertainty in current spawner abundances could be integrated with uncertainty to derive probabilities of breaching LRPs <!--CW remove: that accounts for both. -->
 <!--CH add: "The estimation of logistic regression model can be statistically integrated with estimation of underlying spawner-recruitment relationships at the CU-level when CU status is derived from spawner-recruitment based benchmarks. This statistical integration allow propagate uncertainties from CU level to SMU level."-->
+
+<!--CW Rephrase paragraph above to:
+
+	For logistic regression-based LRPs, we provide 95% CIs and assess their overlap with current status. These CIs represent uncertainty in the estimation of the logistic regression incorporating uncertainty in the underlying benchmarks (e.g., from spawner-recruitment relationships or the watershed-area model). When estimated in a Bayesian framework, probability distributions of LRPs and status againts LRP can be generated to provide advice. The estimation of logistic regression model can be statistically integrated with estimation of underlying CU spawner-recruitment relationships when CU status is derived from spawner-recruitment based benchmarks. This statistical integration allow propagate uncertainties from CU level to SMU level. In future analyses, uncertainty in current spawner abundances could also be integrated to derive probabilities of breaching LRPs. 
+
+-->
+
 
 Similar to proportion-based LRPs, uncertainties in logistic regression-based LRPs can arise from the exclusion of data-limited CUs from analyses when these CUs are not well represented by data-rich CUs that are included. Further uncertainties in logistic regression-based LRPs can arise if the management systems has changed over time such that selectivity among CUs has diverged, or if the covariance in population dynamics has changed due to other natural or anthropogenic factors.<!--CH omit: such that the relationship between aggregate abundances and CU statuses has changed-->  
 
@@ -58,7 +69,10 @@ One difference between projection-based and logistic regression-based LRPs is th
 
 ## IMPACT OF MISSING CUS ON SMU-LEVEL STATUS
 
-For proportion-based LRPs, if the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status defined as the percentage of CUs above red status, but will not increase status to above the LRP of 100%. In contrast, if the LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above the red zone.  <!--CH Q: Is this next sentence true for proportion-based LRPs? I know it does NOT apply for logistic regression-based LRPs (topic of following pgh)--> The power to detect a breach of a proportion-based LRP is relatively weak when the sample size of CUs is small relative to the total number of component CUs. Therefore, statuses that rely on only a small number of CUs tend to be provide more optimistic status than those that include a larger sample of CUs for proportion-based LRPs, as shown for Inside South Coast Chum case study.  This asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs.
+For proportion-based LRPs, if the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status defined as the percentage of CUs above red status, but will not increase status to above the LRP of 100%. In contrast, if the LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above the red zone.  <!--CH Q: Is this next sentence true for proportion-based LRPs? I know it does NOT apply for logistic regression-based LRPs (topic of following pgh)--> The power to detect a breach of a proportion-based LRP is relatively weak when the sample size of CUs is small relative to the total number of component CUs. Therefore, statuses that rely on only a small number of CUs tend to be provide more optimistic status than those that include a larger sample of CUs for proportion-based LRPs, as shown for Inside South Coast Chum case study.  This asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs. <!--CW:
+
+Suggest repharsing last few senteces to:
+The probability of detecting a breach of a proportion-based LRP increases as more CUs within an SMU are assessed. Therefore, statuses that rely on only a small number of CUs tend to be provide more optimistic status than those that include a larger sample of CUs for proportion-based LRPs, as shown for Inside South Coast Chum case study.  This asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs. -->
 
 
 For logistic regression-based LRPs, we found that removing component CUs from assessments of an SMU tended to increase variability in SMU-level status, which may be more pessimistic or optimistic than when all CUs are considered depending on which CU is removed and the level of covariation among CUs.  For this LRP, the addition of CUs affects the fit of the logistic regression model, which impacts the aggregate abundance-based LRP and status in ways that are difficult to predict *a priori*.
@@ -66,16 +80,16 @@ For logistic regression-based LRPs, we found that removing component CUs from as
 
 ## TIME-VARYING PARAMETERS AND IMPACTS ON LRPS
 
-There is increasing evidence of time varying parameters in Pacific salmon populations, particularly relating to trends in productivity [e.g.,;  @dornerSpatialTemporalPatterns2018; @malickRegionalScaleDeclinesProductivity2016; @petermanWidespreadDecreaseProductivity2012]. <!--CW note: it is probably better to group/ describe these papers a bit more, or exclude some of them. CH: I suggest removing these:  @holtImpactTimevaryingProductivity2020;  @connorsClimateCompetitionInfluence2020; @debertinMarineGrowthPatterns2017 --> In Canada, DFO assessments identified declines in productivity for various CUs, e.g., Fraser River Sockeye [@grantEvaluationUncertaintyFraser2011;  @huangRecoveryPotentialAssessment2021], Southern BC Chinook [@dfoIntegratedBiologicalStatus2016], and Interior Fraser River Coho [@arbeiderInteriorFraserCoho2020]. These assessments relied on a variety of tools to identify trends in productivity including the evaluation of trends in recruits per spawner <!--CH: I changed this from: "log spawners per recruit", okay? I'm not sure the logged scale is critically relevant, but the R/S vs S/R is important---> [@arbeiderInteriorFraserCoho2020], evaluation of trends in residuals from recruitment curve fits [@grantEvaluationUncertaintyFraser2011], and explicit consideration of time-varying parameters when fitting recruitment curves using Kalman filter or recursive Bayes approaches [@huangRecoveryPotentialAssessment2021]. 
+There is increasing evidence of time varying parameters in Pacific salmon populations, particularly relating to trends in productivity [e.g.,;  @dornerSpatialTemporalPatterns2018; @malickRegionalScaleDeclinesProductivity2016; @petermanWidespreadDecreaseProductivity2012]. <!--CW note: it is probably better to group/ describe these papers a bit more, or exclude some of them. CH: I suggest removing these:  @holtImpactTimevaryingProductivity2020;  @connorsClimateCompetitionInfluence2020; @debertinMarineGrowthPatterns2017  CW:perfect--> In Canada, DFO assessments identified declines in productivity for various CUs, e.g., Fraser River Sockeye [@grantEvaluationUncertaintyFraser2011;  @huangRecoveryPotentialAssessment2021], Southern BC Chinook [@dfoIntegratedBiologicalStatus2016], and Interior Fraser River Coho [@arbeiderInteriorFraserCoho2020]. These assessments relied on a variety of tools to identify trends in productivity including the evaluation of trends in recruits per spawner <!--CH: I changed this from: "log spawners per recruit", okay? I'm not sure the logged scale is critically relevant, but the R/S vs S/R is important , CW:agreed!---> [@arbeiderInteriorFraserCoho2020], evaluation of trends in residuals from recruitment curve fits [@grantEvaluationUncertaintyFraser2011], and explicit consideration of time-varying parameters when fitting recruitment curves using Kalman filter or recursive Bayes approaches [@huangRecoveryPotentialAssessment2021]. 
 
 Time-varying recruitment parameters affect estimates for salmon benchmarks (e.g., S\textsubscript{MSY} and S\textsubscript{gen}) [@holtImpactTimevaryingProductivity2020] and are also likely to affect population trends, resulting in changes to benchmarks based on historical observations (e.g., percentile-based benchmarks) [@holtEvaluatingBenchmarksBiological2018]. Analytical methods for time-varying reference points have been also proposed for other marine fish species [@amarEvaluationTwoManagement2009; @puntFisheriesManagementClimate2014], some of which have been evaluated empirically and in simulation with mixed results [@olearyComparisonMultipleApproaches2020; @bergerCharacterTemporalVariability2019]. However determining support for time-varying parameters is not always straightforward. Common statistical diagnosis such as inspection of residuals and use of information criteria (e.g. AIC and BIC) often produce conflicting results [@holtImpactTimevaryingProductivity2020].  @bergerCharacterTemporalVariability2019 suggests that dynamic reference points that track changes in underlying population proceses are most useful in situations when stock productivity shifts directionally and the productivity signal is correctly ascertained. In contrast, uncertainty from incorrectly identifying productivity trends can be a major source of inaccuracy in stock status [@bergerCharacterTemporalVariability2019]. 
 
 In a review of stock-recruit analyses for Pacific salmon, including the use of environmental covariates and time-varying parameters, @adkisonReviewSalmonSpawnerRecruitment2021 highlighted that even when there is strong evidence for non-stationarity in salmon populations it is not clear if reference points should be adjusted accordingly. <!--CH addition next sentence--> Where stock depletion is associated with time-varying parameters that are thought be reversible, it may be more appropriate to protect the population from harvest by maintaining high reference points using historical data [@dfoProceedingsNationalWorkshop2013; @szuwalskiClimateChangeNonstationary2016]. @dfoHarvestStrategyCompliant2006 recommend that changes to the reference points should only be adjusted when there is considerable evidence that productivity has changed and there are no expectations that these changes will be reverted naturally or achieved through management. Furthermore, DFO's Precautionary Approach Framework states that "when developing reference points efforts should be made to take into consideration the range of factors which may affect the productivity of the stock including changes in ocean conditions, where information is available" [@dfoFisheryDecisionMakingFramework2009]. This information can help identify if reductions in productivity are likely to be irreversible or only slowly reversible. @klaerHowMuchEvidence2015 devised a framework for evaluation the degree of confidence in productivity shifts in Australian fisheries, and similar approaches could be adapted for Canadian salmon populations. 
 
-Even if time-varying benchmarks or reference points are considered, it is difficult to define how often they should be changed [@zhangReportOceanFrontier2021]. Mistimed changes in benchmarks or reference points may lead to bias in stock status [@holtImpactTimevaryingProductivity2020] and volatility of management responses may lead to management uncertainty, reducing trust in the management process [@adkisonReviewSalmonSpawnerRecruitment2021]. Recent studies recommend the use of case-specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020; @zhangAccountingNonstationaryStock2021; @olearyComparisonMultipleApproaches2020]. However, full feedback simulation studies might not be feasible for every conservation unit due where trends are suspeted to limited resources. Future research should focus on identifying general advice on the best practices for adjusting benchmarks when the stock dynamics is thought to be non-stationary.   
+Even if time-varying benchmarks or reference points are considered, it is difficult to define how often they should be changed [@zhangReportOceanFrontier2021]. Mistimed changes in benchmarks or reference points may lead to bias in stock status [@holtImpactTimevaryingProductivity2020] and volatility of management responses may lead to management uncertainty, reducing trust in the management process [@adkisonReviewSalmonSpawnerRecruitment2021]. Recent studies recommend the use of case-specific feedback simulation exercises in order to determine the appropriate scale to adjust reference points when stock-recruitment parameters are non-stationary [@holtImpactTimevaryingProductivity2020; @zhangAccountingNonstationaryStock2021; @olearyComparisonMultipleApproaches2020]. However, full feedback simulation studies might not be feasible for every conservation unit where trends are suspected due to limited resources. Future research should focus on identifying general advice on the best practices for adjusting benchmarks <!--CW: and LRPs?--> when the stock dynamics is thought to be non-stationary.   
  
 
-Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance- and proportion-based LRPs will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when consistent reductions in productivity was introduced in one sensitivity analysis (analysis that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks declined for most CUs as did aggregate abundance0based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
+Time-varying stock-recruitment dynamics usually occur at the CU level, and the implications for SMU-based LRPs that contain multiple CUs are not straightforward. There are no clear guidelines on how to translate time-varying stock recruitment parameters for CUs into aggregate-level LRPs. Effects of time-varying CU recruitment dynamics on aggregate abundance- and proportion-based LRPs will depend on the degree of synchrony among CUs, the direction of the change in recruitment parameters, past and current stock status, among other factors. For example, in our case study on Interior Fraser River Coho Salmon, when consistent reductions in productivity was introduced in one sensitivity analysis (analysis that included informative priors on capacity in CU-level spawner-recruitment models), benchmarks declined for most CUs as did aggregate abundance based LRP for the SMU. However, in cases where productivity varies at different rates among CUs or capacity changes as well, impacts on CU-level benchmarks and SMU-level LRPs will not be easily predictable. 
 
 
 
@@ -104,7 +118,12 @@ When applying methods to specific case studies, we recommend that aggregate abun
 
 
 
-Although, dfoScienceAdvicePrecautionary2021 recommends that LRPs under Fish Stock provisions be identified by Science, we were unable to identify a specific probability level for all CUs being above red status that aligned with scientific principles. Although it may be possible to select a probability level based on the IPCC likelihood categorization scheme (e.g., more likely than not, likely, very likely, virtually certain) further guidance on choosing among these options may be <!--is?--> required. Alternatively, proportion-based LRPs can be used as the basis for serious harm instead of identifying a specific probability for aggregate abundance-based LRPs, where biological objectives for SMUs can be derived from the probability of achieving those proportion-based LRPs over a specified time frame to inform the performance of various candidate management procedures. The probability and time-frame identified within the objective are identified with managers and stakeholders. When used as part of Management Procedure Framework (e.g.,  dfoManagementProcedureFramework2021), or management strategy evaluation, MSE, the performance of a variety of management procedures against objectives can be evaluated, where management procedures can extend beyond aggregate abundance-based harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation. Therefore, proportion-based LRPs may be preferred as the biological basis of serious harm to clearly distinguish the biologically derived component from desired probability which requires input from managers and stakeholders.
+<!--CW: this last paragraph does not read as research recommendation, but as LRP recommendation, I am not sure it belongs here.
+Also I don't think that the fact taht we did not recommend a probabiliyu level for the aggregate abundance-based LRP is a problem. Science will still work on producing tha logistic/projecton-based model, then Management+science+stakeholders will work on setting the probability and time frame for the objective.-->
+
+Although, @dfoScienceAdvicePrecautionary2021 recommends that LRPs under Fish Stock provisions be identified by Science, we were unable to identify a specific probability level for all CUs being above red status that aligned with scientific principles. <!--CW -I am not sure if the probability level is part of the LRP. I think it is part of the objective, and as such, it should not be determined by science. Probabilities are a reflexion of risk tolerance, and we can't identify it in a purely scientific way-->  Although it may be possible to select a probability level based on the IPCC likelihood categorization scheme (e.g., more likely than not, likely, very likely, virtually certain) further guidance on choosing among these options may be <!--is?--> required. Alternatively, proportion-based LRPs can be used as the basis for serious harm instead of identifying a specific probability for aggregate abundance-based LRPs, where biological objectives for SMUs can be derived from the probability of achieving those proportion-based LRPs over a specified time frame to inform the performance of various candidate management procedures. The probability and time-frame identified within the objective are identified with managers and stakeholders. When used as part of Management Procedure Framework (e.g.,  @dfoManagementProcedureFramework2021), or management strategy evaluation, MSE, the performance of a variety of management procedures against objectives can be evaluated, where management procedures can extend beyond aggregate abundance-based harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation. Therefore, proportion-based LRPs may be preferred as the biological basis of serious harm to clearly distinguish the biologically derived component from desired probability which requires input from managers and stakeholders.
+
+
 
 
 
