--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -1,7 +1,7 @@
 # CASE STUDIES {#case-studies}
 
 
-We applied candidate methods for LRPs developed in Section \@ref(est-methods) to three SMUs as case studies to demonstrate the application of candidate methods, evaluate sensitivity of LRPs to various assumptions, and inform the guidelines presented in Section \@ref(guidelines).  The case studies were Interior Fraser River Coho Salmon, West Coast Vancouver Island (WCVI) Chinook Salmon, and Inner South Coast Chum Salmon  (*Oncorhynchus keta*)- excluding Fraser, each comprising of 3-7 CUs<!--CH: latin names for other salmon species provided at first instance in Ch1. Chum salmon not mentioned in that chapter-->. These were chosen because they varied in data types and availabilities ranging from data-rich (Interior Fraser River Coho) to data-limited (Inner South Coast Chum), to represent a range of SMUs that may require LRPs. Furthermore, they varied in hatchery contributions from high (WCVI Chinook) to relatively low (Interior Fraser River Coho and Inside South Coast Chum) and two are included in the proposed first batch of stocks to be put under regulation for the Fish Stock provisions (Interior Fraser River Coho and WCVI Chinook). For each case study, the set of LRP methods considered is a function of available data and previously developed assessment methods for component CUs. In this section, we provide a brief description of each case study and methods applied to each. More thorough descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results, are available in Holt et al. (in review). An overview of the approaches applied are provided in Table \@ref(tab:lrpapproaches). <!--CH: To add, drafted in "Table of LRP approaches.docx". Table 1. Approaches used to estimate LRPs for each case study (a) and CU assessment methods applied (b).-->
+We applied candidate methods for LRPs developed in Section \@ref(est-methods) to three SMUs as case studies to demonstrate the application of candidate methods, evaluate sensitivity of LRPs to various assumptions, and inform the guidelines presented in Section \@ref(guidelines).  The case studies were Interior Fraser River Coho Salmon, West Coast Vancouver Island (WCVI) Chinook Salmon, and Inner South Coast Chum Salmon  (*Oncorhynchus keta*, excluding Fraser River CUs), each comprising of 3-7 CUs<!--CH: latin names for other salmon species provided at first instance in Ch1. Chum salmon not mentioned in that chapter-->. These were chosen because they varied in data types and availabilities ranging from data-rich (Interior Fraser River Coho) to data-limited (Inner South Coast Chum), to represent a range of SMUs that may require LRPs. Furthermore, they varied in hatchery contributions from high (WCVI Chinook) to relatively low (Interior Fraser River Coho and Inside South Coast Chum). Two are included in the proposed first batch of stocks to be put under regulation for the Fish Stock provisions (Interior Fraser River Coho and WCVI Chinook). For each case study, the set of LRP methods considered is a function of available data and previously developed assessment methods for component CUs. In this section, we provide a brief description of each case study and methods applied to each. More thorough descriptions of case studies, including SMU characteristics, data sources, analysis methods, and results are available in Holt et al. (in review). An overview of the approaches applied are provided in Table \@ref(tab:lrpapproaches). <!--CH: To add, drafted in "Table of LRP approaches.docx". Table 1. Approaches used to estimate LRPs for each case study (a) and CU assessment methods applied (b).-->
 
 
 \renewcommand*{\arraystretch}{1.4}
@@ -39,13 +39,19 @@ We applied candidate methods for LRPs developed in Section \@ref(est-methods) to
 (\#tab:lrpapproaches)
 \end{table}
 
+<!-- LW: Awesome table! We could include this in the case studies paper too maybe?
 
+The table says Rapid Multidimensional Scanning  Tool, should it be Pacific Salmon Status Scanner?
+
+Caption: is there a (b) missing? And there are two (a) labels in the table, should one be (b) and described in caption?
+
+Also, should the cell for Spawner-recruitment benchmark and ISC Chum be filled with "Attempted, estimates unreliable" as we did do them, and show stock recruit parameters over time in the chum appendix? or keep as is because we decided that the data were not good enough to use for that purpose? Fine to keep as is.-->
 
 ## INTERIOR FRASER RIVER COHO
 
-The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each subpopulation above conservation thresholds [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, S~gen~ was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status.  
+The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon that spawn in the Fraser River and tributaries upstream of Hell’s Gate in the Fraser Canyon. This SMU consists of 5 CUs: Middle Fraser, Fraser Canyon, Lower Thompson, North Thompson, and South Thompson [@dfoWildSalmonPolicy2015; Figure \@ref(fig:coho-map)<!-- map fig ref doesn't work, as it's in another paper?-->]. Declines in Interior Fraser Coho spawner abundance throughout the 1990’s<!--remove possessive apostrophe?--> led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Previous work by the Interior Fraser Coho Recovery Team (IFCRT) identified 11 subpopulations nested within the five CUs, and developed recovery objectives based on maintaining abundances of each subpopulation above conservation thresholds [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In 2014, a peer-reviewed WSP status assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson) [@dfoWildSalmonPolicy2015]. As part of the WSP assessment, S~gen~ was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status.  
 
-We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2000 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for proportion-based and logistic regression-based LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection-based LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. Spawner abundances are positively correlated among CUs, with an average correlation of 0.43 (Figure \@ref(density-cor-plot)).<!--CH: Kendra, I averaged values from a ppt of yours with a cor plot; probably best to check this against data used in the density plot below-->
+We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2000 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for proportion-based and logistic regression-based LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection-based LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. Spawner abundances are positively correlated among CUs, with an average correlation of 0.43 (Figure \@ref(fig:density-cor-plot)).<!--CH: Kendra, I averaged values from a ppt of yours with a cor plot; probably best to check this against data used in the density plot below-->
 
 <!--CH: I've started a density plot of spawner correlations for the 3 case studies. I just need the vector (lower triangle of cor matrix, or the entire matrix) of among-CU correlations for IFR coho and ISC chum. Can you send this, or add them to the 'data' folder in the Guidelines repo?-->
 ```{r density-cor-plot, fig.cap="Distribution of correlations in spawner abundances among CUs (or inlets for WCVI Chinook) for 3 case studies", out.width = '60%', warning=FALSE, echo=FALSE, fig.align="center"}
@@ -70,10 +76,11 @@ ggplot(df, aes(cor, fill=SMU, colour=SMU)) + geom_density(alpha=0.1) + xlim(-1,1
 
 ```
 
+<!-- LW: Why is out.width set to 60%? It makes the fig small and the labels hard to read-->
 
-We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009a], we apply the other two approaches (2) and (3) to support the development aggregate abundance-based LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide logistic regression-based and projection-based LRPs for demonstration purposes.
+We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]<!-- I wonder if we want to adjust the bib file entry for IFCRT (Interior Fraser Coho Recovery Team) 2006 because it is showing the full name every time, only need IFCRT 2006 right?-->. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009a], we apply the other two approaches (2) and (3) to support the development aggregate abundance-based LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide logistic regression-based and projection-based LRPs for demonstration purposes.
 
-For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to underlying assumption with a retrospective analysis by removing years of data an re-estimating CU-level benchmarks, CU statuses, SMU-level LRPs, as well as sensitivity analyses where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses on structural assumptions about stock-recruitment relationship when deriving CU-level benchmarks for all proportion-based and aggregate abundance-based LRP methods.
+For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to underlying assumption with a retrospective analysis by removing years of data and re-estimating CU-level benchmarks, CU statuses, SMU-level LRPs, as well as sensitivity analyses where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses on structural assumptions about stock-recruitment relationship when deriving CU-level benchmarks for all proportion-based and aggregate abundance-based LRP methods.
 
 We found that LRPs and resulting status were more sensitive to structural assumptions about the shape of the stock-recruitment model than to the choice of LRP methods or CU assessment approach (Pacific Salmon Status Scanner vs single-metric on spawner abundances vs. single metric on distribution) or the addition of more years or CUs of data.  However, we note that the inclusion of additional CUs occasionally results in more pessimistic status relative to the LRP, but not more optimistic status, possibly creating disincentives to monitoring. This asymmetry is a consequence of the LRP being triggered by any single CU having red status. <!--CH: Kendra, is there anything more we should highlight here?-->
  However, we note that the inclusion of additional CUs occasionally results in more pessimistic status relative to the LRP, but not more optimistic status, possibly creating disincentives to monitoring. This asymmetry is a consequence of the LRP being triggered by any single CU having red status. <!--CH: Kendra, is there anything more we should highlight here?--> <!--CW this past two sentences are true for the proportion-based LRP, but I am not too sure if the same is true for the aggregate abundance LRP, I think we saw more positive status when CUs were removed but I don't think that behavior is generalizable -->
@@ -82,27 +89,29 @@ For this case study, we further demonstrated the approach of averaging over stru
 
 ## WESTCOAST VANCOUVER ISLAND CHINOOK
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 indicators stocks, which are stocks with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002]. Hatchery enhancement is an important component of many of these stocks and only indicator stocks without significant enhancement (PNI>0.5) were included in our analyses.  Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets, with an average correlation of 0.28 (Figure \@ref(density-cor-plot)).
+The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 indicators stocks, which are stocks with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002]. Hatchery enhancement is an important component of many of these stocks and only indicator stocks without significant enhancement (PNI$>$0.5) were included in our analyses.  Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
 
 Under the WSP, CUs are identified at a spatial scale to conserve for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). Similar to the Interior Fraser River Coho case study analysis that considered spawner abundances to subpopulations within CUs <!--CW: I suggest removing reference to coho, as we did use complete CU data for the SR estimates (correct?). Brendan already asked why did you choose to split chinook but combine coho, mentioning it here could also lead to another off topic discussion-->, we considered spawner abundances at the scale of inlets within CUs because of limited demographic exchange between these units.
 
 Two of the 3 CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016].  WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor marine survival rates for WCVI Chinook and low spawner levels over the past 2 decades are highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. 
 
-Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S~REP~ was re-estimated using a hierarchical Bayesian model (as in @liermannUsingAccessibleWatershed2010), and applied to inlets of WCVI Chinook. 
+Biological benchmarks have been estimated for WCVI indicator stocks using an empirical relationship between watershed area and common stock-recruitment biological benchmarks, spawner abundances at replacement, S~REP~, and S~MSY~, from a meta-analysis of 25 Chinook stocks across North America [@parkenHabitatbasedMethodsEstimate2006]. Lack of rigorous recruitment data for WCVI Chinook stocks precludes the use of stock-recruitment based benchmarks. For the development of LRPs for WCVI Chinook, the empirical relationship between watershed area and S~REP~ was re-estimated using a hierarchical Bayesian model [as in @liermannUsingAccessibleWatershed2010], and applied to inlets of WCVI Chinook. 
 
 We characterized CU status in two ways for this case study, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ derived from watershed-area model estimates of S~REP~ and productivity derived from a life-stage specific survival model with expert opinion. We calculated two types of LRPs: proportion-based LRPs and projection-based LRPs. Based on CU-level assessments, there were no years in historical data where all CUs were above the red zone, so it was not possible to identify logistic regression-based LRPs.  Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide projection-based LRPs for demonstration purposes. We implemented sensitivity analyses on projection-based LRPs to two key uncertainties, variability in exploitation among inlets and intrinsic productivity. Further analyses exploring impacts of exploitation, variability in productivity, and capacity are provided in an Appendix to Holt et al. in (review).
 
 In this case study, we found that status was consistent across the LRP methods that were available, and with a previously published assessment. However, projection-based LRPs were also highly sensitive to underlying population productivities. Although the base-case LRP assumes a relatively diffuse distribution of productivities aligned with the range of expert opinion, declines (by 25%) or increases (by 50%) from this value resulted in <!--remove:relatively--> large changes in LRPs estimates. 
 
 
-## INNER SOUTHCOAST CHUM - NON FRASER
+## INSIDE SOUTH COAST CHUM - NON-FRASER
 
-The 'Inside South Coast Chum - Non-Fraser' (ISC-NF Chum) SMU includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are not included in this SMU. They have been categorized as a separate 'Inside South Coast Chum - Fraser' SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(density-cor-plot)). <!--CH comment: check this average value against data to be added to the plot. I pulled it from a bubble plot of cor's from a ppt. -->
+The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are not included in this SMU. They have been categorized as a separate Inside South Coast Chum - Fraser SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(fig:density-cor-plot)). <!--CH comment: check this average value against data to be added to the plot. I pulled it from a bubble plot of cor's from a ppt. LW: confirmed correct from data-->
 
-The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions, and recruitment are too unreliable for quantitative inclusion in stock assessments for this SMU.  Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed hatchery-dominated systems (PNI <<0.5). The remaining systems had little or no hatchery enhancement (PNI likely >0.72). Times-series of proportion of hatchery-origin spawners were not available and so total spawner abundances were used for assessment.
+The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions. The quality of recruitment data is not sufficient to reliably estimate parameters from stock-recruit relationships and use those estimates as benchmarks. Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed three hatchery-dominated systems from the Georgia Strait CU (PNI $<<$0.5). The remaining systems had little or no hatchery enhancement (PNI likely $>$0.72)<!-- LW: definitely want to check with Pieter Van Will on this and skim that report from SEP-->. <!--LW removed: "Times-series of proportion of hatchery-origin spawners were not available and so total spawner abundances were used for assessment."
+This is a bit misleading, we used the best data assessment of wild spawners, by removing the 100% enhanced stocks and infilling 'wild' spawners. Since (as we believe), that besides these systems there is not much enhancement, I think we could leave this out. As it is currently written this conflicts with how methods in case study are now. I can confirm with Pieter Van Will and SEP report. 
+--> 
 
 For this case study, we consider two approaches for characterizing CU status: (1) the Pacific Salmon Status Scanner and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportion-based LRP and logistic-regression based LRPs to this case study and evaluated the sensitivity of SMU-level status from proportion-based LRPs to various data inputs. Because of poor fit of the logistic regression as shown by model diagnostics, were we not able to generate reliable logistic regression-based LRPs for this SMU.
 
 
-We found that assessments based on the Pacific Salmon Status Scanner gave similar results as the single-metric on spawner abundances relative to percentile-based benchmarks, though there was some variability among years. Also, as for Inner Fraser River Coho Salmon, increasing the number of CUs included in analyses resulted in the same or more pessimistic statuses relative to the LRP, never more optimistic. Further, the case study demonstrates that SMU status can be below the LRP even if the aggregate abundances are increasing.
+We found that assessments based on the Pacific Salmon Status Scanner gave identical results as the single-metric on spawner abundances relative to percentile-based benchmarks. Also, as for Inner Fraser River Coho Salmon, increasing the number of CUs included in analyses resulted in more<!--LW: remove equal statuses, all inclusions of more data result in more pessimistic statuses as we have done the analysis, although it is not a random removal/addition of CUs. If we did a full LOO kind of thing, there would be some where adding more data would give equal statuses but we didn't do that--> pessimistic statuses relative to the LRP, never more optimistic. Further, the case study demonstrates that SMU status can be below the LRP even if the aggregate abundances are increasing.
 
