revisions to ch4 included

--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -704,12 +704,12 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\CP4BKWWZ\\Huang et al. - 2021 - Recovery potential assessment for Fraser River Soc.pdf}
 }
 
-@techreport{ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006,
+@techreport{ifcrtConservationStrategyCoho2006,
   title = {Conservation Strategy for {{Coho Salmon}}  ({{Oncorhynchus}} Kisutch), Interior {{Fraser River}} Populations},
-  author = {{IFCRT (Interior Fraser Coho Recovery Team)}},
+  author = {{IFCRT}},
   year = {2006},
   pages = {132},
-  institution = {{Fisheries and Oceans Canada}}
+  institution = {{Interior Fraser Coho Recovery Team, Fisheries and Oceans Canada}}
 }
 
 @article{jardimOperationalizingEnsembleModels2021,
